kubernetes/overlays/syst/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-app
  name: demo-app
spec:
  host: demo-app-node-code-s-demo-syst.apps.az2-osn00.mazgis47.net
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: syst-demo-website-http
    weight: 100
  wildcardPolicy: None
